Update to new Prism API files