@@ -21,18 +21,13 @@ import org.polypheny.db.prisminterface.statements.PIPreparedStatement;
 import org.polypheny.db.prisminterface.statements.PIStatement;
 import org.polypheny.db.type.PolyType;
 import org.polypheny.db.type.entity.PolyValue;
-import org.polypheny.db.type.entity.graph.PolyEdge;
-import org.polypheny.db.type.entity.graph.PolyNode;
-import org.polypheny.db.type.entity.graph.PolyPath;
 import org.polypheny.prism.ColumnMeta;
 import org.polypheny.prism.DocumentFrame;
 import org.polypheny.prism.Frame;
+import org.polypheny.prism.GraphElement;
 import org.polypheny.prism.GraphFrame;
 import org.polypheny.prism.PreparedStatementSignature;
 import org.polypheny.prism.ProtoDocument;
-import org.polypheny.prism.ProtoEdge;
-import org.polypheny.prism.ProtoNode;
-import org.polypheny.prism.ProtoPath;
 import org.polypheny.prism.ProtoPolyType;
 import org.polypheny.prism.RelationalFrame;
 import org.polypheny.prism.Row;
@@ -93,18 +88,8 @@ public class PrismUtils {
     }
 
 
-    private static List<ProtoNode> serializeToNodes( List<List<PolyValue>> data ) {
-        return data.stream().map( e -> PolyValueSerializer.buildProtoNode( (PolyNode) (e.get( 0 )) ) ).collect( Collectors.toList() );
-    }
-
-
-    private static List<ProtoEdge> serializeToEdges( List<List<PolyValue>> data ) {
-        return data.stream().map( e -> PolyValueSerializer.buildProtoEdge( (PolyEdge) (e.get( 0 )) ) ).collect( Collectors.toList() );
-    }
-
-
-    private static List<ProtoPath> serilaizeToPaths( List<List<PolyValue>> data ) {
-        return data.stream().map( e -> PolyValueSerializer.buildProtoPath( (PolyPath) (e.get( 0 )) ) ).collect( Collectors.toList() );
+    private static List<GraphElement> serializeToGraphElement( List<List<PolyValue>> data ) {
+        return data.stream().map( e -> PolyValueSerializer.buildProtoGraphElement( e.get( 0 ) ) ).toList();
     }
 
 
@@ -138,13 +123,7 @@ public class PrismUtils {
     public static Frame buildGraphFrame( boolean isLast, List<List<PolyValue>> data ) {
         GraphFrame.Builder graphFrameBuilder = GraphFrame.newBuilder();
         if ( !data.isEmpty() ) {
-            PolyType elementType = data.get( 0 ).get( 0 ).getType();
-            switch ( elementType ) {
-                case NODE -> graphFrameBuilder.addAllNodes( serializeToNodes( data ) );
-                case EDGE -> graphFrameBuilder.addAllEdges( serializeToEdges( data ) );
-                case PATH -> graphFrameBuilder.addAllPaths( serilaizeToPaths( data ) );
-                default -> throw new RuntimeException( "Should never be thrown!" );
-            }
+            graphFrameBuilder.addAllElement( serializeToGraphElement( data ) );
         }
 
         return Frame.newBuilder()
